WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16874
[Gtk] Missing symbols when compiling with --enable-svg-filters
https://bugs.webkit.org/show_bug.cgi?id=16874
Summary
[Gtk] Missing symbols when compiling with --enable-svg-filters
Pierre-Luc Beaudoin
Reported
2008-01-14 11:05:54 PST
WebCore::SVGResourceFilter::applyFilter(WebCore::GraphicsContext*&, WebCore::FloatRect const&) WebCore::SVGResourceFilter::createPlatformData() WebCore::SVGResourceFilter::prepareFilter(WebCore::GraphicsContext*&, WebCore::FloatRect const&) implementation are missing
Attachments
Stubs
(2.17 KB, patch)
2008-01-14 11:07 PST
,
Pierre-Luc Beaudoin
mrowe
: review-
Details
Formatted Diff
Diff
No tab and a ChangeLog
(2.96 KB, patch)
2008-01-14 19:27 PST
,
Pierre-Luc Beaudoin
alp
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pierre-Luc Beaudoin
Comment 1
2008-01-14 11:07:07 PST
Created
attachment 18443
[details]
Stubs Empty implementations to fix build.
Mark Rowe (bdash)
Comment 2
2008-01-14 18:13:36 PST
Comment on
attachment 18443
[details]
Stubs A tab has snuck into your change, and it needs a changelog. Can you fix those two things and resubmit please?
Pierre-Luc Beaudoin
Comment 3
2008-01-14 19:27:59 PST
Created
attachment 18451
[details]
No tab and a ChangeLog How did a tab get there! It seems to be a bug in Gedit... only on that line, it insists on inserting a tab. I also though the change were so trivial that it didn't require a ChangeLog. Now I know all changes need one.
Alp Toker
Comment 4
2008-01-14 21:41:57 PST
Landed in
r29486
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug